commit : adding the webjars for the jquery, bootstrap and font awesome.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/login.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/login.html
@@ -48,7 +48,7 @@
 								class="form-control form-control-sm" autocomplete="off">
 							<span toggle="#txtPassword"
 								class="fa fa-fw fa-eye field-icon toggle-password"></span> <a
-								th:href="@{/forgot-pwd-request}" class="text-decoration-none"><small
+								th:href="@{/forgot-pwd-request}"><small
 								class="form-text text-right ">Forgot Password</small></a>
 						</div>
 					</div>
