--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/common/navbar.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/common/navbar.html
@@ -11,7 +11,7 @@
 	<header>
 		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-info"
 			th:fragment="navbar">
-			<a class="navbar-brand" href="S001-home.html">Spring Security</a>
+			<a class="navbar-brand" th:href="@{/home}">Spring Security</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarsExampleDefault"
 				aria-controls="navbarsExampleDefault" aria-expanded="false"
@@ -21,16 +21,24 @@
 
 			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item"><a class="nav-link"
-						href="../S001-home.html"><i class="fa fa-home mr-1"></i>Home </a></li>
+					<li class="nav-item" sec:authorize="isAuthenticated()"><a
+						class="nav-link" th:href="@{/home}"><i class="fa fa-home mr-1"></i>Home
+					</a></li>
 				</ul>
-				<div class="my-2 my-lg-0">
+				<div class="my-2 my-lg-0" sec:authorize="!isAuthenticated()">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item"><a class="nav-link"
 							th:href="@{/do-registration}"><i
 								class="fa fa-registered mr-1"></i>Register </a></li>
 						<li class="nav-item active"><a class="nav-link"
 							th:href="@{/login}"><i class="fa fa-sign-in-alt mr-1"></i>Login
+						</a></li>
+					</ul>
+				</div>
+				<div class="my-2 my-lg-0" sec:authorize="isAuthenticated()">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active"><a class="nav-link"
+							th:href="@{/logout}"><i class="fa fa-sign-out-alt mr-1"></i>Logout
 						</a></li>
 					</ul>
 				</div>
