--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS002-forgot-pwd-request.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS002-forgot-pwd-request.html
@@ -30,7 +30,8 @@
 					</div>
 				</div>
 				<div class="row justify-content-center pt-3">
-					<a class="btn btn-sm btn-secondary mr-2 col-md-2" href="@{/login}">Cancel</a>
+					<a class="btn btn-sm btn-secondary mr-2 col-md-2"
+						th:href="@{/login}">Cancel</a>
 					<button type="submit"
 						class="btn btn-sm btn-secondary mr-2 col-md-2">Send</button>
 				</div>
